facet-diff/tests/snapshots/diff_snapshots__diff_vecs_element_inserted_middle.snap
---
source: facet-diff/tests/diff_snapshots.rs
assertion_line: 474
expression: "format_diff_comparison(&a, &b)"
---
╭Before────────────────╮
│Vec<i32> [1, 2, 4]    │
╰──────────────────────╯
╭After─────────────────╮
│Vec<i32> [1, 2, 3, 4] │
╰──────────────────────╯
╔Diff══════════════════╗
║[                     ║
║  .. 2 unchanged items║
║  + 3                 ║
║  .. 1 unchanged item ║
║]                     ║
╚══════════════════════╝
