facet-diff/tests/snapshots/diff_snapshots__diff_vecs_element_removed.snap
---
source: facet-diff/tests/diff_snapshots.rs
expression: "format_diff_comparison(&a, &b)"
---
╭Before──────╮
│Vec<i32> [  │
│  1,        │
│  2,        │
│  3,        │
│  4,        │
│]           │
╰────────────╯
╭After───────╮
│Vec<i32> [  │
│  1,        │
│  2,        │
│  3,        │
│]           │
╰────────────╯
╔Diff════════╗
║[           ║
║  1         ║
║  2         ║
║  3         ║
║  - 4       ║
║]           ║
╚════════════╝
