facet-diff/tests/snapshots/diff_snapshots__diff_vecs_equal.snap
---
source: facet-diff/tests/diff_snapshots.rs
expression: "format_diff_comparison(&a, &b)"
---
[36m╭Before──────╮[0m
[36m│[0m[1mVec<i32>[0m[2m [[0m  [36m│[0m
[36m│[0m  [38;2;224;81;95m1[0m[2m,[0m        [36m│[0m
[36m│[0m  [38;2;224;81;95m2[0m[2m,[0m        [36m│[0m
[36m│[0m  [38;2;224;81;95m3[0m[2m,[0m        [36m│[0m
[36m│[0m[2m][0m           [36m│[0m
[36m╰────────────╯[0m
[32m╭After───────╮[0m
[32m│[0m[1mVec<i32>[0m[2m [[0m  [32m│[0m
[32m│[0m  [38;2;224;81;95m1[0m[2m,[0m        [32m│[0m
[32m│[0m  [38;2;224;81;95m2[0m[2m,[0m        [32m│[0m
[32m│[0m  [38;2;224;81;95m3[0m[2m,[0m        [32m│[0m
[32m│[0m[2m][0m           [32m│[0m
[32m╰────────────╯[0m
[33m╔Diff════════╗[0m
[33m║[0mVec<i32> [  [33m║[0m
[33m║[0m  1,        [33m║[0m
[33m║[0m  2,        [33m║[0m
[33m║[0m  3,        [33m║[0m
[33m║[0m]           [33m║[0m
[33m╚════════════╝[0m
