facet-diff/tests/snapshots/diff_snapshots__diff_vecs_reordered.snap
---
source: facet-diff/tests/diff_snapshots.rs
expression: "format_diff_comparison(&a, &b)"
---
[38;2;86;95;137m╭Before────────────────╮[0m
[38;2;86;95;137m│[0m[1m[38;2;122;162;247mVec<i32>[39m[0m[2m [[0m            [38;2;86;95;137m│[0m
[38;2;86;95;137m│[0m  [38;2;224;81;95m1[39m[2m,[0m                  [38;2;86;95;137m│[0m
[38;2;86;95;137m│[0m  [38;2;224;81;95m2[39m[2m,[0m                  [38;2;86;95;137m│[0m
[38;2;86;95;137m│[0m  [38;2;224;81;95m3[39m[2m,[0m                  [38;2;86;95;137m│[0m
[38;2;86;95;137m│[0m[2m][0m                     [38;2;86;95;137m│[0m
[38;2;86;95;137m╰──────────────────────╯[0m
[38;2;86;95;137m╭After─────────────────╮[0m
[38;2;86;95;137m│[0m[1m[38;2;122;162;247mVec<i32>[39m[0m[2m [[0m            [38;2;86;95;137m│[0m
[38;2;86;95;137m│[0m  [38;2;224;81;95m3[39m[2m,[0m                  [38;2;86;95;137m│[0m
[38;2;86;95;137m│[0m  [38;2;224;81;95m1[39m[2m,[0m                  [38;2;86;95;137m│[0m
[38;2;86;95;137m│[0m  [38;2;224;81;95m2[39m[2m,[0m                  [38;2;86;95;137m│[0m
[38;2;86;95;137m│[0m[2m][0m                     [38;2;86;95;137m│[0m
[38;2;86;95;137m╰──────────────────────╯[0m
[38;2;224;175;104m╔Diff══════════════════╗[0m
[38;2;224;175;104m║[0m[38;2;86;95;137m[[39m                     [38;2;224;175;104m║[0m
[38;2;224;175;104m║[0m  [38;2;115;218;202m+ 3[39m                 [38;2;224;175;104m║[0m
[38;2;224;175;104m║[0m  [38;2;86;95;137m.. 2 unchanged items[39m[38;2;224;175;104m║[0m
[38;2;224;175;104m║[0m  [38;2;247;118;142m- 3[39m                 [38;2;224;175;104m║[0m
[38;2;224;175;104m║[0m[38;2;86;95;137m][39m                     [38;2;224;175;104m║[0m
[38;2;224;175;104m╚══════════════════════╝[0m
